# uma-details-utility

./: .gitignore  Cargo.toml  README.md
examples/merge_factors_screenshots/: main.rs
examples/merge_factors_screenshots_scaled/: main.rs
src/: image.rs  lib.rs
src/image/: detail.rs  horse_girl_details_image.rs
src/image/detail/: factor.rs  footer.rs  status.rs
